# astra_teleop

./: .gitignore  LICENSE  README.md  pyproject.toml
src/astra_teleop/: calibration_board.py  calibration_calculator.py  calibration_collect.py  calibration_process.py  cam.py  generate_aruco.py  main.py  process.py
src/astra_teleop/experiment/: README.md  collect.py  optimize.py  plot.py  plot_final.py
tests/: exp.py
