[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra_teleop"
version = "0.0.1"
authors = [
  { name="lookas", email="i@18kas.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hilookas/astra_teleop"
Issues = "https://github.com/hilookas/astra_teleop/issues"