[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra_teleop"
version = "0.0.1"
authors = [
  { name="lookas", email="i@18kas.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python >= 4.9.0",
    "pytransform3d",
    "matplotlib >= 3.9", # solve `A module that was compiled using NumPy 1.x cannot be run in` Error
    "scipy >= 1.14", # solve `A module that was compiled using NumPy 1.x cannot be run in` Error
]

[project.urls]
Homepage = "https://github.com/hilookas/astra_teleop"
Issues = "https://github.com/hilookas/astra_teleop/issues"